# graph-exact-coloring-heuristic

./: .gitignore  CLAUDE.md  CMakeLists.txt  Mtx2Graph.cpp  Mtx2Graph.hpp  README.md  datatypes.h  datatypes_listS.h  demo_greedy_coloring.cpp  demo_indset_exact_coloring.cpp  demo_indset_removal_coloring.cpp  demo_is_exact_coloring.cpp  demo_is_removal_coloring.cpp  hgraph_to_graph.cpp  hyper_graph_to_graph.py  main.cpp  main2.cpp  mmio.cpp  mmio.h  ndtest.mtx  paper.tex  process_produced_graph.cpp  tests.cpp
.github/workflows/: main.yml
docs/: Doxyfile
exact_coloring/: exact_coloring.h
generators/: Cycle.h  GeneralizedPetersonGenerator.h  GeneratorInterface.h
indset_exact_coloring/: indset_exact_coloring.h
is_exact_coloring/: is_exact_coloring.h
matrices/GD98_a/: GD98_a_coord.mtx  GD98_a_nodename.txt
